--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,7 @@ h1 {
   font-size: 3rem;
   color: var(--dark-navy);
   line-height: 3rem;
+  margin-top: 4rem;
   /* margin-block-start: 2rem; */
 }
 
@@ -23,6 +24,7 @@ h2 {
   font-family: "Montserrat", sans-serif;
   color: var(--kobe);
   padding-top: 0.5rem;
+  margin-top: 3rem;
   /* line-height: 2rem; */
 }
 
@@ -34,7 +36,8 @@ h3 {
 header {
   background-color: var(--orange);
   padding: 1.5rem;
-  color: #eee;
+  color: #333;
+  font-style: bold;
 }
 p {
   max-width: 70ch;
@@ -43,7 +46,7 @@ p {
 
 #list #listtwo {
   text-decoration: none;
-  color: #eee;
+  color: #333;
 }
 
 main {
@@ -61,9 +64,9 @@ body {
 }
 a[href] {
   text-decoration: none;
-  color: #eee;
+  color: #333;
 }
-a[href].button {
+.button {
   border: 2px solid var(--ming);
   padding: 0.5rem;
   transition: background-color 300ms;
@@ -72,11 +75,11 @@ a[href].button {
   font-size: 0.8rem;
   font-weight: bold;
   color: #333;
-  margin-top: 0.4rem;
+  margin-top: 2rem;
   cursor: pointer;
 }
 
-a[href].button:hover {
+.button:hover {
   background-color: var(--ming);
   color: #fff;
 }
